outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-05-25/evaluations/problem_eval3982056831673959156_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to nearest for small unvisited sets (≤3 nodes) to balance exploration and exploitation.}
                                                  ^
SyntaxError: invalid character '≤' (U+2264)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaults to nearest for small unvisited sets (≤3 nodes) to balance exploration and exploitation.}
                                                  ^
SyntaxError: invalid character '≤' (U+2264)
